--- a/platform/templates/virtualservice.yaml
+++ b/platform/templates/virtualservice.yaml
@@ -1,15 +1,26 @@
-#apiVersion: networking.istio.io/v1alpha3
-#kind: VirtualService
-#metadata:
-#  name: argocd
-#spec:
-#  hosts:
-#    - "argocd.alex.localhost"
-#  gateways:
-#    - platform-gateway
-#  http:
-#    - route:
-#        - destination:
-#            host: argocd-server
-#            port:
-#              number: 80
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: argocd-vs
+  namespace: argocd
+spec:
+  hosts:
+  - argocd.alex.localhost
+  gateways:
+  - istio-system/platform-gateway
+  tls:
+  - match:
+    - port: 443
+      sniHosts:
+      - argocd.alex.localhost
+    route:
+    - destination:
+        host: argocd-server
+        port:
+          number: 443
+  http:
+  - route:
+    - destination:
+        host: argocd-server
+        port:
+          number: 443
