--- a/charts/grafana/templates/virtual-service.yaml
+++ b/charts/grafana/templates/virtual-service.yaml
@@ -1,15 +1,25 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: app
+  name: grafana-vs
 spec:
   hosts:
-    - "grafana.alex.localhost"
+  - grafana.alex.localhost
   gateways:
-    - grafana-gateway
+  - istio-system/platform-gateway
+  tls:
+  - match:
+    - port: 443
+      sniHosts:
+      - grafana.alex.localhost
+    route:
+    - destination:
+        host: grafana
+        port:
+          number: 80
   http:
-    - route:
-        - destination:
-            host: grafana
-            port:
-              number: 80
+  - route:
+    - destination:
+        host: grafana
+        port:
+          number: 80
