feature: Add something

--- a/platform/values.yaml
+++ b/platform/values.yaml
@@ -58,7 +58,7 @@ services:
     config:
 
   grafana:
-    enable: false
+    enable: true
     valueFile: *environmentValues
     argoApplication:
       name: grafana
