feature: Add something

--- a/platform/values.yaml
+++ b/platform/values.yaml
@@ -62,7 +62,7 @@ services:
     valueFile: *environmentValues
     argoApplication:
       name: grafana
-      namespace: grafana
+      namespace: monitoring
       chart: charts/grafana
     config:
 
