feature: Add something

--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -3,4 +3,10 @@ grafana:
   adminPassword: admin
 
   ingress:
-    enabled: false
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: istio
+    path: /
+    pathType: Prefix
+    hosts:
+      - grafana.alex.localhost
