--- a/charts/grafana/templates/virtual-service.yaml
+++ b/charts/grafana/templates/virtual-service.yaml
@@ -1,25 +1,25 @@
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: grafana-vs
-spec:
-  hosts:
-  - grafana.alex.localhost
-  gateways:
-  - istio-system/platform-gateway
-  tls:
-  - match:
-    - port: 443
-      sniHosts:
-      - grafana.alex.localhost
-    route:
-    - destination:
-        host: grafana
-        port:
-          number: 80
-  http:
-  - route:
-    - destination:
-        host: grafana
-        port:
-          number: 80
+#apiVersion: networking.istio.io/v1alpha3
+#kind: VirtualService
+#metadata:
+#  name: grafana-vs
+#spec:
+#  hosts:
+#  - grafana.alex.localhost
+#  gateways:
+#  - istio-system/platform-gateway
+#  tls:
+#  - match:
+#    - port: 443
+#      sniHosts:
+#      - grafana.alex.localhost
+#    route:
+#    - destination:
+#        host: grafana
+#        port:
+#          number: 80
+#  http:
+#  - route:
+#    - destination:
+#        host: grafana
+#        port:
+#          number: 80
