--- a/platform/values.yaml
+++ b/platform/values.yaml
@@ -58,7 +58,7 @@ services:
     config:
 
   grafana:
-    enable: true
+    enable: false
     valueFile: *environmentValues
     argoApplication:
       name: grafana
@@ -117,11 +117,11 @@ services:
       chart: charts/kuard
     config:
 
-  victoria-logs:
+  monitoring:
     enable: true
     valueFile: *environmentValues
     argoApplication:
-      name: victoria-logs
+      name: monitoring
       namespace: monitoring
-      chart: charts/victoria-logs
+      chart: charts/monitoring
     config:
