feature: Add something

--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -1,1 +1,6 @@
-#kube-prometheus-stack:
+kube-prometheus-stack:
+  prometheusOperator:
+    tls:
+      enabled: false
+    admissionWebhooks:
+      enabled: false
