--- a/charts/jupyterhub/Chart.yaml
+++ b/charts/jupyterhub/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: mlflow
+name: jupyterhub
 description: A Helm chart for Kubernetes
 
 type: application
@@ -7,6 +7,6 @@ version: 0.1.0
 appVersion: "1.16.0"
 
 dependencies:
-  - name: mlflow
-    version: 0.7.19
-    repository: https://community-charts.github.io/helm-charts
+  - name: jupyterhub
+    version: 3.1.0
+    repository: https://jupyterhub.github.io/helm-chart
