--- a/charts/jupyterhub/values.yaml
+++ b/charts/jupyterhub/values.yaml
@@ -36,6 +36,13 @@ jupyterhub:
         - name: debug
           port: 5678
 
+    prePuller:
+      hook:
+        enabled: false
+      continuous:
+        enabled: false
+      pullProfileListImages: false
+
     extraVolumeMounts:
       - name: form-conf
         mountPath: /tmp/
