feature: Add something

--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -4,3 +4,10 @@ kube-prometheus-stack:
       enabled: false
     admissionWebhooks:
       enabled: false
+  grafana:
+    defaultDashboardsEnabled: false
+    adminPassword: admin
+#    dashboards: { }
+      # default:
+      #   custom-dashboard:
+      #     file: dashboards/custom-dashboard.json
