feature: Add something

--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -7,7 +7,7 @@ kube-prometheus-stack:
   grafana:
     defaultDashboardsEnabled: false
     adminPassword: admin
-#    dashboards: { }
-      # default:
-      #   custom-dashboard:
-      #     file: dashboards/custom-dashboard.json
+    dashboards:
+     ju:
+      custom-dashboard:
+        file: dashboards/jupyterhub.json
