--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -4,10 +4,11 @@ kube-prometheus-stack:
       enabled: false
     admissionWebhooks:
       enabled: false
-  grafana:
-    defaultDashboardsEnabled: false
-    adminPassword: admin
-    dashboards:
-     ju:
-      custom-dashboard:
-        file: dashboards/jupyterhub.json
+    grafana:
+      defaultDashboardsEnabled: false
+      adminPassword: admin
+      dashboards:
+        jupyterhub:
+          local-dashboard:
+            url: https://raw.githubusercontent.com/iAlexMlops/MLPlatform/main/charts/monitoring/dashboards/jupyterhub.json
+            token: ''
