feature: Add something

--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -4,11 +4,24 @@ kube-prometheus-stack:
       enabled: false
     admissionWebhooks:
       enabled: false
+
   grafana:
     defaultDashboardsEnabled: false
     adminPassword: admin
+    dashboardProviders:
+      dashboard-providers.yaml:
+        apiVersion: 1
+        providers:
+        - name: 'default'
+          orgId: 1
+          folder: ''
+          type: file
+          disableDeletion: false
+          editable: true
+          options:
+            path: /var/lib/grafana/dashboards/default
     dashboards:
-      jupyterhub:
-        local-dashboard:
+      default:
+        jupyterhub:
           url: https://raw.githubusercontent.com/iAlexMlops/MLPlatform/main/charts/monitoring/dashboards/jupyterhub.json
           token: ''
