--- a/charts/minio/values.yaml
+++ b/charts/minio/values.yaml
@@ -1,10 +1,7 @@
 minio:
   ingress:
-    enabled: true
-    ingressClassName: "nginx"
-    hostname: minio.alex.localhost
-    path: /
-    pathType: ImplementationSpecific
+    enabled: false
 
   auth:
     rootUser: admin
+    rootPassword: admin
