--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -25,3 +25,20 @@ kube-prometheus-stack:
         jupyterhub:
           url: https://raw.githubusercontent.com/iAlexMlops/MLPlatform/main/charts/monitoring/dashboards/jupyterhub.json
           token: ''
+
+
+#loki:
+#  loki:
+#    storage:
+#      bucketNames:
+#        chunks: chunks
+#        ruler: ruler
+#        admin: admin
+#      type: s3
+#      s3:
+#        endpoint: <endpoint>
+#        region: <AWS region>
+#        secretAccessKey: <AWS secret access key>
+#        accessKeyId: <AWS access key ID>
+#        s3ForcePathStyle: false
+#        insecure: false
