feature: Add something

--- a/charts/minio/values.yaml
+++ b/charts/minio/values.yaml
@@ -11,7 +11,7 @@ minio:
     buckets:
     - name: loki
       quota:
-        type: clear
+        type: set
         size: 3GiB
       tags:
         app: loki
