feature: Add something

--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -27,18 +27,18 @@ kube-prometheus-stack:
           token: ''
 
 
-#loki:
-#  loki:
-#    storage:
-#      bucketNames:
-#        chunks: chunks
-#        ruler: ruler
-#        admin: admin
-#      type: s3
-#      s3:
-#        endpoint: <endpoint>
+loki:
+  loki:
+    storage:
+      bucketNames:
+        chunks: chunks
+        ruler: ruler
+        admin: admin
+      type: s3
+      s3:
+        endpoint: s3://minio.minio:9000
 #        region: <AWS region>
-#        secretAccessKey: <AWS secret access key>
-#        accessKeyId: <AWS access key ID>
-#        s3ForcePathStyle: false
-#        insecure: false
+        secretAccessKey: password
+        accessKeyId: admin
+        s3ForcePathStyle: false
+        insecure: false
