--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -29,6 +29,15 @@ kube-prometheus-stack:
 
 loki:
   loki:
+    schema_config:
+      configs:
+        - from: 2024-04-01
+          object_store: s3
+          store: tsdb
+          schema: v1
+          index:
+            prefix: index_
+            period: 24h
     storage:
       bucketNames:
         chunks: chunks
