--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -28,17 +28,26 @@ kube-prometheus-stack:
 
 
 loki:
+  mode: SingleBinary
   loki:
-    useTestSchema: true
+    commonConfig:
+      replication_factor: 1
     storage:
-      bucketNames:
-        chunks: chunks
-        ruler: ruler
-        admin: admin
-      type: s3
-      s3:
-        endpoint: s3://minio.minio:9000
-        secretAccessKey: password
-        accessKeyId: admin
-#        s3ForcePathStyle: false
-#        insecure: false
+      type: 'filesystem'
+    schemaConfig:
+      configs:
+        - from: 2024-01-01
+          store: tsdb
+          index:
+            prefix: loki_index_
+            period: 24h
+          object_store: filesystem # we're storing on filesystem so there's no real persistence here.
+          schema: v13
+  singleBinary:
+    replicas: 1
+  read:
+    replicas: 0
+  backend:
+    replicas: 0
+  write:
+    replicas: 0
