--- a/charts/monitoring/Chart.yaml
+++ b/charts/monitoring/Chart.yaml
@@ -10,7 +10,7 @@ dependencies:
   - name: kube-prometheus-stack
     version: 58.2.2
     repository: https://prometheus-community.github.io/helm-charts
-  - name: loki
-    version: 6.3.4
-    repository: https://grafana.github.io/helm-charts
+#  - name: loki
+#    version: 6.3.4
+#    repository: https://grafana.github.io/helm-charts
 
