--- a/platform/values.yaml
+++ b/platform/values.yaml
@@ -50,7 +50,7 @@ services:
 
   # DevOps
   minio:
-    enable: true
+    enable: false
     valueFile: *environmentValues
     argoApplication:
       name: minio
