--- a/charts/monitoring/values.yaml
+++ b/charts/monitoring/values.yaml
@@ -17,7 +17,7 @@ kube-prometheus-stack:
       auth.generic_oauth:
         enabled: true
         allow_sign_up: true
-        scopes: openid email profile offline_access roles
+        scopes: email profile offline_access roles
         name: Keycloak
         auth_url: https://keycloak.alex.localhost/realms/master/protocol/openid-connect/auth
         token_url: https://keycloak.alex.localhost/realms/master/protocol/openid-connect/token
