feature: Add something

--- a/platform/values.yaml
+++ b/platform/values.yaml
@@ -107,7 +107,7 @@ services:
     config:
 
   keycloak:
-    enable: false
+    enable: true
     valueFile: *environmentValues
     argoApplication:
       name: keycloak
