feature: Add something

--- a/charts/keycloak/values.yaml
+++ b/charts/keycloak/values.yaml
@@ -18,7 +18,10 @@ keycloak:
     ingressClassName: "nginx"
     hostname: keycloak.alex-localhost.ru
     servicePort: http
-    tls: false
+    tls: true
+    selfSigned: true
+    annotations:
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 
   keycloakConfigCli:
     enabled: true
