--- a/charts/keycloak/values.yaml
+++ b/charts/keycloak/values.yaml
@@ -5,9 +5,9 @@ keycloak:
 #    type: ClusterIP
 #    clusterIP: "10.111.40.30"
 #
-#  extraEnvVars:
-#  - name: KC_PROXY
-#    value: "edge"
+  extraEnvVars:
+  - name: KC_PROXY
+    value: "edge"
 
   auth:
     adminUser: admin
