feature: Add something

--- a/charts/keycloak/values.yaml
+++ b/charts/keycloak/values.yaml
@@ -21,7 +21,7 @@ keycloak:
     tls: true
     extraTls:
      - hosts:
-         - keycloak.local
+         - keycloak.alex-localhost.ru
        secretName: platform-certificate
 #    selfSigned: true
     annotations:
