feature: Add something

--- a/argocd/values.yaml
+++ b/argocd/values.yaml
@@ -2,16 +2,18 @@ argo-cd:
   server:
     ingress:
       enabled: true
-#      annotations:
-#        nginx.ingress.kubernetes.io/rewrite-target: /
       ingressClassName: "nginx"
       hostname: "argocd.alex-localhost.ru"
       path: /
       pathType: Prefix
       tls: false
+      extraTls:
+        - hosts:
+            - argocd.alex-localhost.ru
+          secretName: platform-certificate
+
   crds:
     install: true
-    #kubectl apply -k https://github.com/argoproj/argo-cd/manifests/crds\?ref\=stable
   configs:
     cm:
       url: https://argocd.alex-localhost.ru
@@ -25,8 +27,6 @@ argo-cd:
       server.insecure: true
       dexserver.disable.tls: true
       server.dex.server.plaintext: true
-#      server.x.frame.options: allow-from "http://keycloak.alex-localhost.ru"
-#      server.content.security.policy: frame-ancestors *
     repositories:
       main-platform-repo:
         url: https://github.com/iAlexMlops/MLPlatform.git
