--- a/charts/keycloak/values.yaml
+++ b/charts/keycloak/values.yaml
@@ -14,16 +14,11 @@ keycloak:
     adminPassword: "admin"
 
   ingress:
-    enabled: true
+    enabled: false
     ingressClassName: "nginx"
     hostname: keycloak.alex-localhost.ru
     servicePort: http
     tls: true
-    extraTls:
-     - hosts:
-         - keycloak.alex-localhost.ru
-       secretName: platform-certificate
-#    selfSigned: true
     annotations:
       nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 
