--- a/charts/ingress-nginx/values.yaml
+++ b/charts/ingress-nginx/values.yaml
@@ -4,3 +4,11 @@ ingress-nginx:
       annotations:
         loadbalancer.openstack.org/flavor-id: "3265f75f-01eb-456d-9088-44b813d29a60"
         loadbalancer.openstack.org/keep-floatingip: "true"
+
+    resources:
+      limits:
+        cpu: 200m
+        memory: 254Mi
+      requests:
+        cpu: 50m
+        memory: 32Mi
